force-app/main/default/objects/Log_PCIDSS__c/Log_PCIDSS__c.object-meta.xml
<CustomObject>
    <description>log of transaction for module pcidss</description>
    <label>Log PCIDSS</label>
    <nameField>
        <label>Log PCIDSS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs PCIDSS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>