force-app/main/default/objects/Log_PCIDSS__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <description>response code</description>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>